--- a/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
@@ -20,16 +20,7 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
@@ -106,7 +97,7 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       <enum>QTabWidget::South</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="documentMode">
       <bool>true</bool>
@@ -231,46 +222,6 @@ border-bottom: 0px;;
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tabManageData">
-      <property name="styleSheet">
-       <string notr="true">QWidget {
-/* border-bottom: 3px solid #f9dac7; */
-border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 #ededed,
-                                 stop: 1.0 #f9dac7
-                                 );
-}</string>
-      </property>
-      <attribute name="title">
-       <string>Manage Data</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>0</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>3</number>
-       </property>
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <item row="0" column="0">
-        <widget class="NewGeneManageData" name="widgetManageDataPane" native="true">
-         <property name="styleSheet">
-          <string notr="true">QWidget {
-border-bottom: 0px;;
-}</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
     </widget>
    </item>
   </layout>
@@ -298,12 +249,6 @@ border-bottom: 0px;;
    <class>NewGeneManageVGs</class>
    <extends>QWidget</extends>
    <header location="global">newgenemanagevgs.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>NewGeneManageData</class>
-   <extends>QWidget</extends>
-   <header location="global">newgenemanagedata.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
